--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
             <div class="content">
                 <div class="inner">
-                    <h1>Dimension</h1>
-                    <p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br /> for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+                    <h1>Ameno's Portfolio</h1>
+                    <p>Welcome to my portfolio I keep some of my epic projects yes very epic and cool ok</p>
                 </div>
             </div>
             <nav>
@@ -47,7 +47,7 @@
             <!-- Intro -->
             <article id="intro">
                 <h2 class="major">Intro</h2>
-                <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+                <span class="image main"><img src="images/bird.jpg" alt="" /></span>
                 <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus
                     erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam
@@ -58,18 +58,16 @@
             <!-- Work -->
             <article id="work">
                 <h2 class="major">Work</h2>
-                <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-                <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-                <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque
-                    lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+                <span class="image main"><img src="images/bird.jpg" alt="" /></span>
+                <p>Here is some of my work: <a href="https://github.com/AmenoCoyane/responsive-web-design-I">Here is a responsive website</a></p>
+                <p>Here's another cool website: <a href="https://github.com/AmenoCoyane/UI-III-Flexbox">Here</a></p>
             </article>
 
             <!-- About -->
             <article id="about">
                 <h2 class="major">About</h2>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris
-                    nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+                <span class="image main"><img src="images/bird.jpg" alt="" /></span>
+                <p>I am Robert Allen an up and comming web developer I am learning to develop websites which will hopefully lead the path to a great career in it.</p>
             </article>
 
             <!-- Contact -->
